Add a more descriptive translation

--- a/i18n/fi.po
+++ b/i18n/fi.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: Odoo Server 8.0rc1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-08-12 12:41+0000\n"
-"PO-Revision-Date: 2014-08-12 15:42+0200\n"
+"PO-Revision-Date: 2014-08-12 15:50+0200\n"
 "Last-Translator: Jarmo Kortetjärvi <jarmo@futurable.fi>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -24,4 +24,4 @@ msgstr "TESTIYMPÄRISTÖ  -"
 #. module: testing_message
 #: view:False:0
 msgid "ALL CHANGES WILL BE DISCARDED"
-msgstr "KAIKKI MUUTOKSET NOLLATAAN"
+msgstr "MUUTOKSIA EI SÄILYTETÄ"
