--- a/web_report_sfs/i18n/fi.po
+++ b/web_report_sfs/i18n/fi.po
@@ -1,21 +1,19 @@
 # Translation of Odoo Server.
 # This file contains the translation of the following modules:
-# 	* web_report_sfs
+#	* web_report_sfs
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 12.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-01-29 15:11+0000\n"
-"PO-Revision-Date: 2020-01-29 17:13+0200\n"
+"POT-Creation-Date: 2020-06-16 07:50+0000\n"
+"PO-Revision-Date: 2020-06-16 07:50+0000\n"
 "Last-Translator: <>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
+"Content-Transfer-Encoding: \n"
 "Plural-Forms: \n"
-"Language: fi\n"
-"X-Generator: Poedit 2.2.1\n"
 
 #. module: web_report_sfs
 #: model_terms:ir.ui.view,arch_db:web_report_sfs.footer
@@ -39,6 +37,11 @@ msgstr "<span>Kotipaikka:</span>"
 
 #. module: web_report_sfs
 #: model_terms:ir.ui.view,arch_db:web_report_sfs.footer
+msgid "<span>VAT</span>"
+msgstr "<span>Verokoodi</span>"
+
+#. module: web_report_sfs
+#: model_terms:ir.ui.view,arch_db:web_report_sfs.footer
 msgid "<span>Website:</span>"
 msgstr "<span>Verkkosivu:</span>"
 
@@ -46,3 +49,4 @@ msgstr "<span>Verkkosivu:</span>"
 #: model_terms:ir.ui.view,arch_db:web_report_sfs.header
 msgid "Confidential"
 msgstr "Luottamuksellinen"
+
