--- a/web_login_username/i18n/fi.po
+++ b/web_login_username/i18n/fi.po
@@ -1,23 +1,22 @@
 # Translation of Odoo Server.
 # This file contains the translation of the following modules:
-# 	* web_login_username
+#	* web_login_username
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 10.0\n"
+"Project-Id-Version: Odoo Server 12.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-04-25 06:40+0000\n"
-"PO-Revision-Date: 2018-04-25 09:42+0300\n"
+"POT-Creation-Date: 2021-01-12 12:08+0000\n"
+"PO-Revision-Date: 2021-01-12 12:08+0000\n"
 "Last-Translator: <>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
+"Content-Transfer-Encoding: \n"
 "Plural-Forms: \n"
-"Language: fi\n"
-"X-Generator: Poedit 1.8.7.1\n"
 
 #. module: web_login_username
-#: model:ir.ui.view,arch_db:web_login_username.login
+#: model_terms:ir.ui.view,arch_db:web_login_username.login
 msgid "Username"
 msgstr "Käyttäjänimi"
+
